Se agrego el api que regresa los dias reservados
